<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySpeed">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:id="@+id/staticText"
        android:paddingTop="30dp"/>

    <com.cardiomood.android.controls.gauge.SpeedometerGauge
        android:id="@+id/speedometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/staticText"
        android:layout_marginTop="7dp"
        android:padding="8dp"
        android:paddingTop="70dp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/speedometer"
        android:layout_centerHorizontal="true"
        android:paddingTop="180dp"
        android:text="0 km/h"
        android:textColor="#00FF00"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/L1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/value"

        android:layout_marginTop="250dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/avg_speed"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/Aspeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:paddingTop="15dp"
                android:text="@string/_0_km_h"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fastest_speed"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/Mspeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:text="0 km/h"
                android:textAlignment="center"
                android:textSize="30sp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/L2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/L1"

        android:layout_marginTop="170dp"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="RPM"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/RPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"

                android:paddingTop="15dp"
                android:text="0  RPM"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DISTANCE"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="15dp"
                android:text="0 km"
                android:textAlignment="center"
                android:textSize="30sp" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>